[project]
name = "comfyui_substring"
description = "Just a simple substring node that takes text and length as input, and outputs the first length characters."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/godspede/ComfyUI_Substring"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "godspede"
DisplayName = "ComfyUI_Substring"
Icon = ""
